# studio-ai

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  dev.sh  dump.rdb  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.claude/: settings.json
.claude/skills/vault-lint/: SKILL.md
.claude/skills/vault-maintain/: SKILL.md
.claude/skills/vault-query/: SKILL.md
.superpowers/brainstorm/69398-1775398212/: .server-stopped  layout-wireframe-v2.html  layout-wireframe-v3.html  layout-wireframe.html  sidebar-features.html  sidebar-layout.html
apps/api/: .env.example  config.py  main.py  pyproject.toml  requirements.txt
apps/api/middleware/: jwt_validation.py
apps/api/routers/: relay.py  stripe_webhooks.py  websocket.py
apps/api/services/: connection_manager.py  jti_revocation.py  redis_client.py
apps/api/tests/: test_connection_manager.py  test_jti_revocation.py  test_jwt_validation.py  test_relay.py  test_websocket.py
apps/web/: .env.local.example  next.config.ts  package.json  tsconfig.tsbuildinfo  vitest.config.ts
apps/web/src/: middleware.ts
bridge/core/: __init__.py  actions.py  auth.py  message.py  server.py
bridge/fl_studio/: __init__.py  _protocol.py  device_studio_ai.py  device_studio_ai_receive.py  device_studio_ai_respond.py  handlers.py  handlers_bulk.py  handlers_introspect.py  handlers_organize.py  ipc_transport.py
bridge/fl_studio/tests/: conftest.py  test_device_studio_ai.py  test_handlers_bulk.py  test_protocol.py  (+3 more)
bridge/tests/: test_message.py  test_server.py
plugin/: Cargo.toml
plugin/src/: ipc.rs  lib.rs  pipe_ipc.rs  state.rs  websocket_bridge.rs  websocket_cloud.rs
plugin/src/pipe_ipc/: mod.rs  unix.rs  windows.rs
scripts/: deploy-plugin-windows.sh  deploy-plugin.sh  install-fl-script.ps1  install-fl-script.sh
(+120 files in other folders)
