[package]
name = "studio-ai-plugin"
version = "0.1.0"
edition = "2021"
description = "Studio AI VST3 plugin with embedded WebView"

[lib]
crate-type = ["cdylib"]

[dependencies]
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = ["standalone"] }
nih_plug_webview = { git = "https://github.com/httnn/nih-plug-webview.git" }

tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
log = "0.4"

[profile.release]
opt-level = 2
strip = true
lto = "thin"
